# doko3000

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  README.md  main.py  pyproject.toml
docker/: default.env  docker-compose-https.yml  docker-compose-nginx.yml  docker-compose-traefik-letsencrypt.yml  docker-compose.user.yml  docker-compose.yml  entrypoint.sh
doko3000/: main.py
