[project]
name = "doko3000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudant>=2.15.0",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-compress>=1.23",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
]

[tool.setuptools]
packages = ["doko3000"]

[tool.uv]
package = true

[project.scripts]
doko-dev = "doko3000.main:main"
